--- a/clothStore/templates/cloth_store/index.html
+++ b/clothStore/templates/cloth_store/index.html
@@ -1,42 +1,81 @@
 {% extends 'cloth_store/base.html' %}
+{% load static %}
 
 {% block title %}Bagify{% endblock %}
 
+{% block head %}
+<link rel="stylesheet" href="{% static 'css/index.css'%}">
+{% endblock %}
+
 {% block content %}
-
-Navbar on top on base.html
-
-<p>Main jumbotron here</p>
-
-<div id="carousel" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-        {% for item in carousel_list %}
-        <li data-target="#carousel" data-slide-to="{{forlop.counter0}}" {% if forloop.first %}class="active"{% endif %}></li>
-        {% endfor %}
-    </ol>
-    <div class="carousel-inner">
-        {% for item in carousel_list %}
-        <div class="carousel-item">
-            <img class="d-block w-100" src="{{item.image}}" alt="clickable image leading to collections">
-            <div class="carousel-caption">
-                <h3>Title</h3>
-                <p>Text</p>
+<div id="carousel" class="carousel slide carousel-fade mb-4" data-ride="carousel">
+    <!--Slides-->
+    <div class="carousel-inner" role="listbox">
+        {% for item in carousel %}
+        <div class="carousel-item {% if forloop.first %}active{% endif %}">
+            <div class="view">
+                <img class="d-block w-100" src="{{ item.image.url }}" alt="slide">
+                <div class="mask rgba-black-light"></div>
             </div>
-        <div>
+            <div class="carousel-caption">
+                <h3 class="h3-responsive">{{ item.title }}</h3>
+                {% if item.subtitle %}<p class="d-none d-sm-block">{{ item.subtitle }}</p>{% endif %}
+            </div>
+        </div>
         {% endfor %}
     </div>
+    <!--/.Slides-->
+    <!--Controls-->
+    <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+    <!--/.Controls-->
 </div>
 
-<p>Some spacing with some text</p>
+<section class="best-sellers my-5 p-1">
+    <h2 class="text-center my-3"><span>Best Sellers</span> / <span>New Products</span></h2>
+    <div class="scrolling-wrapper dragscroll">
+        {% for item in popular%}
+      <div class="card">
+          <img src="{{item.main_image.url}}" class="w-100" alt="">
+      </div>
+        {% endfor %}
+    </div>
+    <div class="float-left arrow text-light">
+        <i class="fa fa-angle-left fa-2x"></i>
+    </div>
+    <div class="float-right arrow text-light">
+        <i class="fa fa-angle-right fa-2x"></i>
+    </div>
+</section>
 
-<p>Stacked inlined photos with products, a title like best sellers!</p>
+<section class="company-details container p-3">
+    <h3>Bagify</h3>
+    <p>Bagify is a fictional company of bags</p>
+    <p>Here goes some more info of the company.</p>
+    <p>Info on why we are great</p>
+    <p>Some inspirational message:</p>
+    <h4>Every story has a person. Buy our backpacks.</h4>
+</section>
 
-<p>Another stack of in lined phoots like: newest additions</p>
+<section class="newest-products my-5 container">
+    <h2 class="text-center">Newest Additions</h2>
+    <div class="row">
+        {% for category in categories %}
+        <div class="col-6 col-sm-4">
+            <img src="" alt="">
+        </div>
+        {% endfor %}
+    </div>
+</section>
 
-<p>Some metadata</p>
+{% endblock %}
 
-<p>maybe some clickables with categories?</p>
-
-<p>Footer of the base html</p>
-
+{% block script %}
+<script type="text/javascript" src="https://cdn.rawgit.com/asvd/dragscroll/master/dragscroll.js"></script>
 {% endblock %}
