--- a/clothStore/static/css/collections.css
+++ b/clothStore/static/css/collections.css
@@ -1,9 +1,61 @@
-.categories-boxes input {
-    display: none;
-    position: absolute;
-    width: 0px;
-    height: 0px;
+.checkboxes input:checked + .badge {
+  background-color: black;
+  color: white;
 }
 
+.checkboxes .badge {
+  background-color: white;
+  color: black;
+}
+
+.card.card-cascade.wider {
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  background-color: transparent;
+}
+
+.card-img-top {
+  width: 100%;
+  border-top-left-radius: calc(.25rem - 1px);
+  border-top-right-radius: calc(.25rem - 1px);
+}
+
+.card.card-cascade .view.view-cascade {
+  -webkit-box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
+  box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
+  -webkit-border-radius: 0.25rem;
+  border-radius: 0.25rem;
+  z-index: 10;
+}
+
+.card.card-cascade.wider .card-body.card-body-cascade {
+  -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  margin-left: 4%;
+  margin-right: 4%;
+  background: #fff;
+  z-index: 1;
+  -webkit-border-radius: 0 0 0.25rem 0.25rem;
+  border-radius: 0 0 0.25rem 0.25rem;
+}
+
+.card.card-ecommerce .card-footer {
+  background-color: transparent;
+}
+
+.img-narrower {
+  margin-left: 4%;
+  margin-right: 4%;
+  margin-top: -1.25rem;
+}
+
+.card-body {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+  -webkit-border-radius: 0 !important;
+  border-radius: 0 !important;
+  flex: 1 1 auto;
+  padding: 1.25rem;
+}
 
 /*# sourceMappingURL=collections.css.map */
