--- a/clothStore/templates/cloth_store/index.html
+++ b/clothStore/templates/cloth_store/index.html
@@ -55,17 +55,17 @@
         {% if item.main_image%}
       <div class="card">
           <!-- Card content -->
-          <div class="card-body elegant-color white-text rounded-top position-absolute w-100">
+          <!-- <div class="card-body elegant-color white-text rounded-top position-absolute w-100"> -->
 
               <!-- Social shares button -->
-              <a class="activator waves-effect mr-4"><i class="fas fa-share-alt white-text"></i></a>
+              <!-- <a class="activator waves-effect mr-4"><i class="fas fa-share-alt white-text"></i></a> -->
               <!-- Title -->
-              <h4 class="card-title">Card title</h4>
-              <hr class="hr-light">
+              <!-- <h4 class="card-title">Card title</h4> -->
+              <!-- <hr class="hr-light"> -->
               <!-- Link -->
-              <a href="#!" class="white-text d-flex justify-content-end"><h5>Read more <i class="fas fa-angle-double-right"></i></h5></a>
+              <!-- <a href="#!" class="white-text d-flex justify-content-end"><h5>Read more <i class="fas fa-angle-double-right"></i></h5></a> -->
 
-        </div>
+        <!-- </div> -->
 
         <!-- Card Dark -->
           <div class="card-image overlay p-0 m-0">
