--- a/clothStore/static/css/index.css
+++ b/clothStore/static/css/index.css
@@ -1,11 +1,25 @@
 #carousel img {
   object-fit: cover;
   width: 100%;
-  max-height: 550px;
+  max-height: 450px;
   overflow-y: hidden;
-  z-index: 0;
+  z-index: 4;
+}
+#carousel .carousel-caption {
+  width: 100%;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+#carousel .carousel-caption h1 {
+  font-weight: 300;
+  font-size: 30px;
 }
 
+.items-scroll {
+  position: relative;
+  overflow: hidden;
+}
 .items-scroll .header input {
   display: none;
 }
@@ -19,7 +33,7 @@
   opacity: 0.9;
 }
 .items-scroll .scrolling-wrapper {
-  max-height: 300px;
+  max-height: 250px;
   width: 100%;
   overflow-x: scroll;
   overflow-y: hidden;
@@ -30,34 +44,46 @@
 .items-scroll .scrolling-wrapper::-webkit-scrollbar {
   display: none;
 }
-.items-scroll .scrolling-wrapper .card {
-  height: 100%;
-  width: 40%;
-  max-width: 200px;
-  min-width: 150px;
-  margin-left: 20px;
+.items-scroll .scrolling-wrapper .card, .items-scroll .scrolling-wrapper .card-naked {
+  height: 250px;
+  position: relative;
+  max-width: 250px;
+  min-width: 100px;
+  margin-left: 0px;
   word-wrap: break-word;
   display: inline-block;
 }
-.items-scroll .scrolling-wrapper .card .view.overlay {
+.items-scroll .scrolling-wrapper .card .view.overlay, .items-scroll .scrolling-wrapper .card-naked .view.overlay {
   z-index: 1;
 }
-.items-scroll .scrolling-wrapper .card .card-image {
-  max-height: 100%;
+.items-scroll .scrolling-wrapper .card .card-image, .items-scroll .scrolling-wrapper .card-naked .card-image {
+  object-fit: cover;
+  width: 100%;
+  height: 230px;
 }
-.items-scroll .scrolling-wrapper .card .card-image a {
-  max-height: 100%;
-}
-.items-scroll .scrolling-wrapper .card .card-body {
+.items-scroll .scrolling-wrapper .card .card-body, .items-scroll .scrolling-wrapper .card-naked .card-body {
+  position: absolute !important;
   opacity: 0.8;
-  z-index: 10;
+  z-index: 2;
   margin: 0;
   padding: 0;
 }
+.items-scroll .scrolling-wrapper .card .cart-button, .items-scroll .scrolling-wrapper .card-naked .cart-button {
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  z-index: 3;
+}
 .items-scroll .arrow {
-  position: relative;
-  bottom: 115px;
-  margin: 5px;
+  z-index: 3;
+  position: absolute;
+  bottom: 180px;
+}
+.items-scroll .left {
+  left: 0px;
+}
+.items-scroll .right {
+  right: 0px;
 }
 
 .company-details {
@@ -75,6 +101,11 @@
   min-height: 100%;
   min-width: 100%;
   max-width: 110%;
+}
+
+.alert {
+  z-index: 4;
+  bottom: 0;
 }
 
 /*# sourceMappingURL=index.css.map */
