--- a/clothStore/static/css/index.scss
+++ b/clothStore/static/css/index.scss
@@ -5,15 +5,31 @@
 //     z-index:10;
 // }
 
-#carousel img {
-    object-fit: cover;
-    width: 100%;
-    max-height: 550px;
-    overflow-y: hidden;
-    z-index:0;
+#carousel {
+    img {
+        object-fit: cover;
+        width: 100%;
+        max-height: 450px;
+        overflow-y: hidden;
+        z-index:4;
+    }
+
+    .carousel-caption {
+        width: 100%;
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        h1 {
+            font-weight: 300;
+            font-size: 30px;
+        }
+    }
 }
 
 .items-scroll {
+    position: relative;
+    overflow: hidden;
+
     .header {
         input{
             display: none
@@ -30,7 +46,7 @@
     }
 
     .scrolling-wrapper {
-        max-height: 300px;
+        max-height: 250px;
         width: 100%;
         overflow-x: scroll;
         overflow-y: hidden;
@@ -42,12 +58,12 @@
           display: none;
       }
 
-      .card {
-          height: 100%;
-          width: 40%;
-          max-width: 200px;
-          min-width: 150px;
-          margin-left: 20px;
+      .card, .card-naked {
+          height: 250px;
+          position: relative;
+          max-width: 250px;
+          min-width: 100px;
+          margin-left: 0px;
           word-wrap: break-word;
           display: inline-block;
           .view.overlay {
@@ -55,25 +71,39 @@
           }
 
           .card-image {
-              a {
-                  max-height: 100%;
-              }
-              max-height: 100%;
+            object-fit: cover;
+            width: 100%;
+            height: 230px;
           }
 
           .card-body {
+              position:absolute !important;
               opacity: 0.8;
-              z-index: 10;
+              z-index: 2;
               margin: 0;
               padding: 0;
+          }
+          .cart-button {
+              position:absolute;
+              bottom:0px;
+              left: 0px;
+              z-index: 3;
           }
       }
     }
 
     .arrow {
-        position: relative;
-        bottom: 115px;
-        margin: 5px;
+        z-index: 3;
+        position: absolute;
+        bottom: 180px;
+        // top: 0px;
+    }
+
+    .left {
+        left:0px;
+    }
+    .right {
+        right:0px;
     }
 }
 
@@ -96,4 +126,9 @@
         min-width: 100%;
         max-width: 110%;
     }
+}
+
+.alert{
+    z-index: 4;
+    bottom: 0;
 }
