--- a/clothStore/static/css/index.scss
+++ b/clothStore/static/css/index.scss
@@ -1,9 +1,4 @@
-// .navbar{
-//     position: fixed;
-//     width: 100%;
-//     opacity: .85;
-//     z-index:10;
-// }
+
 
 #carousel {
     img {
@@ -28,7 +23,6 @@
 
 .items-scroll {
     position: relative;
-    overflow: hidden;
 
     .header {
         input{
@@ -45,8 +39,11 @@
         }
     }
 
+
+
     .scrolling-wrapper {
-        max-height: 250px;
+        // height: 260px;
+        max-height: 280px;
         width: 100%;
         overflow-x: scroll;
         overflow-y: hidden;
@@ -54,9 +51,6 @@
         padding: 0;
         -webkit-overflow-scrolling: touch;
 
-      &::-webkit-scrollbar {
-          display: none;
-      }
 
       .card, .card-naked {
           height: 250px;
@@ -83,11 +77,23 @@
               margin: 0;
               padding: 0;
           }
-          .cart-button {
+
+          .item-label {
               position:absolute;
               bottom:0px;
               left: 0px;
               z-index: 3;
+              padding: .5rem 1.6rem;
+              font-size: .64rem;
+              box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
+              background-color: #fff;
+              color: #000;
+              margin: .375rem;
+              border-radius: .125rem;
+              display: inline-block;
+                font-weight: 400;
+                text-align: center;
+                vertical-align: middle;
           }
       }
     }
@@ -96,7 +102,6 @@
         z-index: 3;
         position: absolute;
         bottom: 180px;
-        // top: 0px;
     }
 
     .left {
@@ -126,9 +131,4 @@
         min-width: 100%;
         max-width: 110%;
     }
-}
-
-.alert{
-    z-index: 4;
-    bottom: 0;
 }
