--- a/clothStore/static/css/collections.css
+++ b/clothStore/static/css/collections.css
@@ -14,8 +14,10 @@
   background-color: transparent;
 }
 
-.card-img-top {
+.card-img {
   width: 100%;
+  max-height: 350px;
+  object-fit: cover;
   border-top-left-radius: calc(.25rem - 1px);
   border-top-right-radius: calc(.25rem - 1px);
 }
@@ -56,6 +58,12 @@
   border-radius: 0 !important;
   flex: 1 1 auto;
   padding: 1.25rem;
+}
+
+@media screen and (max-width: 500px) {
+  .card-img {
+    max-height: 300px;
+  }
 }
 
 /*# sourceMappingURL=collections.css.map */
