--- a/clothStore/static/css/collections.scss
+++ b/clothStore/static/css/collections.scss
@@ -18,8 +18,10 @@
     background-color: transparent;
 }
 
-.card-img-top {
+.card-img {
     width: 100%;
+    max-height: 350px;
+    object-fit: cover;
     border-top-left-radius: calc(.25rem - 1px);
     border-top-right-radius: calc(.25rem - 1px);
 }
@@ -60,4 +62,10 @@
     border-radius: 0!important;
     flex: 1 1 auto;
     padding: 1.25rem;
+}
+
+@media screen and (max-width:500px) {
+    .card-img {
+        max-height: 300px;
+    }
 }
