--- a/clothStore/templates/cloth_store/collections.html
+++ b/clothStore/templates/cloth_store/collections.html
@@ -15,48 +15,44 @@ Collections
 <script id="catalog-template" type="text/x-handlebars-template">
     <div class="row">
     {{#each items}}
-        <div class="col-lg-4 col-md-6 my-3">
+        <div class="col-lg-4 col-md-6 my-4">
           <!-- Card -->
           <div class="card card-cascade card-ecommerce">
 
+
+            <!-- Card image -->
+            <div class="view view-cascade img-narrower overlay">
+              <img src="/media/{{main_image}}" class="card-img" alt="sample photo {{main_image}}">
+              <a href="/product/{{id}}">
+                <div class="mask rgba-white-slight waves-effect waves-light"></div>
+              </a>
+            </div>
+            <!-- Card image -->
+
             <!-- Card content -->
             <div class="card-body card-body-cascade text-center">
-              <!-- Category & Title -->
               <a href="" class="text-muted">
-                <h5>Smartphone</h5>
+                <h5>{{category}}</h5>
               </a>
               <h4 class="card-title">
                 <strong>
-                  <a href="">{{name}}</a>
+                {{name}}
                 </strong>
               </h4>
-              <!-- Description -->
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing minima veniam elit.</p>
-              <!-- Card footer -->
+
+
               <div class="card-footer px-1">
                 <span class="float-left font-weight-bold">
                   <strong>{{price}}$</strong>
                 </span>
                 <span class="float-right">
-                  <a class="" data-toggle="tooltip" data-placement="top" title="" data-original-title="Quick Look">
+                  <a href="/product/{{id}}" data-toggle="tooltip" data-placement="top" title="" data-original-title="Quick Look">
                     <i class="fas fa-eye grey-text ml-3"></i>
-                  </a>
-                  <a class="" data-toggle="tooltip" data-placement="top" title="" data-original-title="Add to Wishlist">
-                    <i class="fas fa-heart grey-text ml-3"></i>
                   </a>
                 </span>
               </div>
             </div>
             <!-- Card content -->
-
-            <!-- Card image -->
-            <div class="view view-cascade img-narrower overlay">
-              <img src="/media/{{main_image}}" class="card-img-top" alt="sample photo {{main_image}}">
-              <a>
-                <div class="mask rgba-white-slight waves-effect waves-light"></div>
-              </a>
-            </div>
-            <!-- Card image -->
 
           </div>
           <!-- Card -->
