--- a/clothStore/templates/cloth_store/index.html
+++ b/clothStore/templates/cloth_store/index.html
@@ -11,14 +11,6 @@
 
 
 {% block content %}
-<!-- <div class="col-12 offset-sm-2 offset-md-3 col-sm-8 col-md-6 position-fixed alert alert-info alert-dismissible fade show mb-1" role="alert">
-  <h4>Added to cart!</h4>
-  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-    <span aria-hidden="true">&times;</span>
-  </button>
-  <hr>
-  <p class="mb-0">You can checkout your cart clicking <a href="/cart" class="alert-link">here.</a></p>
-</div>  -->
 
 <div id="carousel" class="carousel slide carousel-fade mb-4" data-ride="carousel">
     <!--Slides-->
@@ -72,34 +64,39 @@
           <!--Featured image-->
           <div class="view overlay hm-white-slight rounded">
               <img src="{{item.main_image.url}}" class="hoverable img-fluid card-image" data-id="">
-              <a target="_blank" href ="#">
-                  <div class="mask rgba-grey-light"></div>
+              <a href ="{% url 'product' item.id %}">
+                  <div class="mask rgba-grey-light">
+                      <div class="btn btn-lg btn-white">
+                          See details
+                      </div>
+                  </div>
               </a>
           </div>
 
-          <button data-toggle="tooltip" title="Add to cart" class="cart-button btn btn-white btn-sm" data-id="{{item.id}}" data-placement="left" title="Add to cart" alt="add item to cart">
-              <i class="fas fa-shopping-cart"></i>
-          </button>
+          <div class="item-label">
+              ${{ item.price }}
+          </div>
+
             </div>
         {% endif %}
         {% endfor %}
     </div>
 
-    <div class="scrolling-wrapper dragscroll animated collapse" id="newItems">
+    <div class="scrolling-wrapper collapse" id="newItems">
         {% for item in newest%}
         {% if item.main_image %}
         <div class="card-naked">
       <!--Featured image-->
       <div class="view overlay hm-white-slight rounded">
           <img src="{{item.main_image.url}}" class="hoverable img-fluid card-image" data-id="">
-          <a href ="#">
+          <a href ="{% url 'product' item.id %}">
               <div class="mask rgba-grey-light"></div>
           </a>
       </div>
 
-      <button class="cart-button btn btn-white btn-sm" data-id="{{item.id}}" data-placement="left" title="Add to cart" alt="add item to cart">
-          <i class="fas fa-shopping-cart"></i>
-      </button>
+      <div class="item-label">
+          ${{ item.price }}
+      </div>
         </div>
         {% endif %}
         {% endfor %}
@@ -136,7 +133,7 @@
         {% for category in categories %}
         <div class="col-6 col-sm-5 p-0 view zoom">
             <img class="img-fluid" src="{{ category.image.url }}" alt="image of the category">
-            <a href="/collections/{{category.name}}/"><div class="mask flex-center waves-effect waves-light rgba-black-light">
+            <a href="{% url 'collection' category.name %}"><div class="mask flex-center waves-effect waves-light rgba-black-light">
                 <h4 class="white-text">{{category.name}}</h4>
             </div></a>
         </div>
@@ -148,7 +145,5 @@
 {% endblock %}
 
 {% block script %}
-<script type="text/javascript" src="https://cdn.rawgit.com/asvd/dragscroll/master/dragscroll.js"></script>
-
 <script src="{% static 'js/index.js' %}" charset="utf-8"></script>
 {% endblock %}
