--- a/clothStore/templates/registration/activation_email.html
+++ b/clothStore/templates/registration/activation_email.html
@@ -42,7 +42,8 @@
         </header>
         <main class="container my-4 p-5">
             <p>We are glad to have you on board!</p>
-            <a href="#" class="btn btn-primary d-block p-3 my-3">ACTIVATE YOUR ACCOUNT</a>
+
+            <a href="{{site}}/activate/{{activation_key}}" class="btn btn-primary d-block p-3 my-3">ACTIVATE YOUR ACCOUNT</a>
             <p>Happy shopping.</p>
             <small>If you did <span class="bg-danger">not</span> registered an account on Bagify please ignore this message.</small>
         </main>
