--- a/clothStore/templates/cloth_store/collections.html
+++ b/clothStore/templates/cloth_store/collections.html
@@ -8,127 +8,114 @@ Collections
 <link rel="stylesheet" href="{% static 'css/collections.css' %}">
 
 <script type="text/javascript">
-    var django_data = {{items|safe}};
+    var items_data = {% if items_json %}{{ items_json|safe}}{% else %} null{% endif %};
 </script>
 
-{% verbatim %}
-<script id="catalog-template" type="text/x-handlebars-template">
-    <div class="row">
-    {{#each items}}
-        <div class="col-lg-4 col-md-6 my-4">
-          <!-- Card -->
-          <div class="card card-cascade card-ecommerce">
-
-
-            <!-- Card image -->
-            <div class="view view-cascade img-narrower overlay">
-              <img src="/media/{{main_image}}" class="card-img" alt="sample photo {{main_image}}">
-              <a href="/product/{{id}}">
-                <div class="mask rgba-white-slight waves-effect waves-light"></div>
-              </a>
-            </div>
-            <!-- Card image -->
-
-            <!-- Card content -->
-            <div class="card-body card-body-cascade text-center">
-              <a href="" class="text-muted">
-                <h5>{{category}}</h5>
-              </a>
-              <h4 class="card-title">
-                <strong>
-                {{name}}
-                </strong>
-              </h4>
-
-
-              <div class="card-footer px-1">
-                <span class="float-left font-weight-bold">
-                  <strong>{{price}}$</strong>
-                </span>
-                <span class="float-right">
-                  <a href="/product/{{id}}" data-toggle="tooltip" data-placement="top" title="" data-original-title="Quick Look">
-                    <i class="fas fa-eye grey-text ml-3"></i>
-                  </a>
-                </span>
-              </div>
-            </div>
-            <!-- Card content -->
-
-          </div>
-          <!-- Card -->
-        </div>
-    {{/each}}
-    </div>
-</script>
-{% endverbatim %}
 
 {% endblock %}
 
 {% block content %}
 
-<!-- // <div class="col-lg-4 col-md-6">
-//     {{description}}<br>
-//     {{price}}
-//     {{main_image}}
-//     <h1>{{main_image.url}}</h1>
-//     {{name}}
-//     {{price}}
-// </div> -->
-    <header>
-        <!-- CATEGORIES CHECKBOXES -->
-        <div class="w-100 btn-group categories-boxes my-3" data-toggle="buttons">
-            <div class="container">
-                <div class="row">
-                    {% for category in categories %}
-
-                        {% if query%}
-                        <label class="col-6 col-md-3 btn btn-primary form-check-label {% if query|lower == category.name|lower %} active {% endif %} checkboxes">
-                          <input class="" type="checkbox" name="selected-categories" value="{{category.id}}" autocomplete="off" {% if query|lower == category.name|lower %} checked {% endif %}>{{category.name}}
-                        </label>
-                        {% else %}
-                        <label class="col-6 col-md-3 btn btn-primary form-check-label">
-                          <input type="checkbox" name="selected-categories" value="{{category.id}}" autocomplete="off">{{category.name}}
-                        </label>
-                        {% endif %}
-                    {% endfor %}
-
-                </div>
+<header>
+    <!-- FILTERS  -->
+    <div class="container py-2 my-2">
+        <!-- CATEGORIES -->
+        <div class="row my-2">
+            {% for category in categories %}
+            <div class="col col-lg-3">
+                <label class="filter-checkbox category-checkbox">
+                  <input type="checkbox" name="selected-categories" value="{{category.id}}" autocomplete="off" {% if query|lower == category.name|lower %}checked{% endif %} hidden/>
+                  <div>
+                      <h3 class="text-uppercase">{{category.name}}</h3>
+                  </div>
+                </label>
             </div>
+            {% endfor %}
         </div>
-        <!-- END OF CATEGORIES CHECKBOXES -->
+        <!-- END CATEGORIES  -->
+        <!--  GENDER AND SEARCH  -->
+        <div class="row mt-4">
+            <div class="col-12 col-sm-8">
+                <form class="form-inline md-form form-sm my-1">
+                  <input class="form-control form-control-sm mr-3 w-100" type="text" placeholder="Search by name" aria-label="Search" id="search">
+                </form>
+            </div>
 
-        <!-- GENDER AND SORTING  -->
-        <div class="container">
-            <div class="row">
-                <div class="col-12 col-sm-6">
-                    <form class="form-inline md-form form-sm my-1">
-                      <i class="fas fa-2x fa-sort mr-3"></i>
-                      <input class="form-control form-control-sm mr-3 w-75" type="text" placeholder="Search" aria-label="Search" id="search">
-                      <i class="fas fa-search" aria-hidden="true"></i>
-                    </form>
-                </div>
-                <div class="col-12 p-0 col-sm-6 col-md-5 btn-group btn-group-toggle d-flex flex-column flex-md-row" data-toggle="buttons">
-                    <label class="btn btn-primary checkboxes">
-                      <input type="checkbox" name="gender" value="F" autocomplete="off">
-                      <i class="fas fa-2x fa-venus"></i>
-                      <h5 class="d-inline-block m-0"> Women</h5>
+            <div class="col-12 p-0 col-sm-4">
+                <div class="d-inline-block ml-3 text-center">
+                    <label class="filter-checkbox mx-2">
+                      <input type="checkbox" name="gender" value="F" autocomplete="off" hidden>
+                      <div>
+                          <i class="fas fa-2x fa-venus"></i>
+                          <h3 class="d-inline-block m-0"> Women</h3>
+                      </div>
                     </label>
-                    <label class="btn btn-primary checkboxes">
-                      <input type="checkbox" name="gender" value="M" autocomplete="off">
-                      <i class="fas fa-2x fa-mars"></i>
-                      <h5 class="d-inline-block m-0"> Men</h5>
+                    <br class="d-none d-md-block">
+                    <label class="filter-checkbox">
+                      <input type="checkbox" name="gender" value="M" autocomplete="off" hidden>
+                      <div>
+                          <i class="fas fa-2x fa-mars"></i>
+                          <h3 class="d-inline-block m-0"> Men</h3>
+                      </div>
                     </label>
                 </div>
             </div>
         </div>
-        <!-- END OF GENDER AND SORTING -->
-    </header>
-    <br>
-
-    <div class="container" id="catalog">
-
     </div>
+    <!-- FILTERS -->
+</header>
+    <br>
+    <!-- CATALOG IT ITEMS -->
+    <div class="container" id="catalog">
+        <div class="row">
+        {% for item in items %}
+            {% for display in item.get_display_images %}
+            <div class="col-lg-4 col-sm-6 my-4" data-id="{{item.id}}" hidden>
+              <!-- Card -->
+              <div class="card card-cascade card-ecommerce">
 
+                <!-- Card image -->
+                <div class="view view-cascade img-narrower overlay">
+                  <img src="{{display.image.url}}" class="card-img" alt="product photo">
+                  <a href="/product/{{item.id}}">
+                    <div class="mask rgba-white-slight waves-effect waves-light"></div>
+                  </a>
+                </div>
+                <!-- Card image -->
+
+                <!-- Card content -->
+                <div class="card-body card-body-cascade text-center">
+                  <a href="" class="text-muted">
+                    <h5 class="text-uppercase small">{{display.color.label}}</h5>
+                  </a>
+                  <h4 class="card-title">
+                    <strong>
+                    {{item.name}}
+                    </strong>
+                  </h4>
+
+
+                  <div class="card-footer px-1">
+                    <span class="float-left font-weight-bold">
+                      <strong>{{item.price}}$</strong>
+                    </span>
+                    <span class="float-right">
+                      <a href="/product/{{id}}" data-toggle="tooltip" data-placement="top" title="" data-original-title="Quick Look">
+                        <i class="fas fa-eye grey-text ml-3"></i>
+                      </a>
+                    </span>
+                  </div>
+                </div>
+                <!-- Card content -->
+
+              </div>
+              <!-- Card -->
+            </div>
+            {% endfor %}
+        {% endfor %}
+        </div>
+    </div>
+    <!-- END OF CATALOG OF ITEMS -->
 {% endblock %}
 {% block script %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.1/handlebars.min.js" charset="utf-8"></script>
