--- a/bagify/static/css/styles.scss
+++ b/bagify/static/css/styles.scss
@@ -93,3 +93,20 @@
         }
     }
 }
+
+.checkout {
+
+    .cart {
+        .row {
+            border-radius: 5px;
+            background-color: #f9f9f9;
+            padding: 15px 5px;
+        }
+
+        img {
+            object-fit: cover;
+            width: 100%;
+            height: 50px;
+        }
+    }
+}
