--- a/bagify/templates/base.html
+++ b/bagify/templates/base.html
@@ -23,7 +23,7 @@
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarContent">
-                    <!-- <ul class="navbar-nav mr-auto">
+                    <ul class="navbar-nav mr-auto">
                         <li class="nav-item dropdown">
                           <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown" aria-haspopup="true"
                             aria-expanded="false"><i class="fa fa-list-alt d-sm-none"></i> Categories
@@ -34,7 +34,7 @@
 
                           </div>
                         </li>
-                    </ul> -->
+                    </ul>
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
                           <a class="nav-link" href="{% url 'cart' %}">
